[package]
name = "hermes"
version = "0.1.0"
description = "A simple key-val server"
authors = ["George Lewis <ghl227@gmail.com>"]
license = "MIT"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
tiny_http = "0.5"
url = "0.5.2"
#url = "0.5"
#url = "0.2.38"

#[dependencies.url]
#git = "https://github.com/servo/rust-url"
